# seta

./: .gitignore  .gitmodules  README.md  collab_setup.sh  pyproject.toml  setup.sh
dataset/: tbench-tasks
dataset/tbench-tasks_convert/: val.parquet
training/data_utils/: download_data.py
training/tbench_areal_workflow/: README.md  chat_agent_trace.py  train.py
